# python-project-template

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: deploy-docs.yml  release.yml  tests.yml
docs/: Makefile  api.rst  appendix.rst  conf.py  docs_github.rst  docs_local.rst  features.rst  index.rst  installation.rst  release.rst  requirements.txt  structure.rst  tests.rst  usage.rst
examples/: example_1_calculator.py  example_2_replace_operation.py
scripts/: write_logo.py
src/example_lib/: __init__.py  calculator.py  exceptions.py
src/python_project_template/: __init__.py  calculator.py  operations.py  registry.py  utils.py
src/python_project_template_AS/: __init__.py  calculator.py  exceptions.py  operations.py  utils.py
tests/: conftest.py  test_calculator.py  test_operations.py  test_registry.py
