[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example-lib"
version = "0.1.0"
description = "Mini calculator library"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Andrea" }]
license = { text = "MIT" }
dependencies = []

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["example_lib*"]
