[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example-lib"
version = "0.1.0"
description = "Mini calculator library showcasing clean code, testing, and packaging."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Andrea Scaglioni", email = "andrea.c.scaglioni@gmail.com" }]
keywords = ["example", "template", "project-template", "pytest", "sphinx", "CI/CD"]
license = { text = "MIT" }
dependencies = []

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-q",
  "--strict-markers",
  "--disable-warnings",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-fail-under=85",
]
markers = [
  "integration: marks integration tests (deselect with '-m \"not integration\"')",
  "slow: marks slow tests",
]


# --- Optional dependencies for development, docs, etc.
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pre-commit",
  "black",
  "ruff",
  "mypy",
]

docs = [
  "sphinx>=7.0"
]


# --- SetUpTool options
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["example_lib*"]
