[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-project-template"
description = "A minimal Python project demonstrating best practices for testing, documentation, and CI/CD. It implements a mini calculator as a minimal example."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Andrea Scaglioni", email = "andrea.c.scaglioni@gmail.com" }]
keywords = ["example", "template", "project-template", "pytest", "sphinx", "CI/CD"]
license = { text = "MIT" }
dependencies = []

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q","--strict-markers", "--disable-warnings", "--cov=src", "--cov-report=term-missing", "--cov-fail-under=85"]
markers = [
  "integration: marks integration tests (deselect with '-m \"not integration\"')",
  "slow: marks slow tests",
]


# --- Optional dependencies for development, docs, etc.
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pre-commit",
  "black",
  "ruff",
  "mypy",
]

docs = [
  "sphinx.ext.autodoc",
  "sphinx.ext.napoleon",
  "sphinx.ext.viewcode",
  "sphinx.ext.autosummary",
  "sphinx_autodoc_typehints",
  'sphinx-mdinclude',
  "sphinx_rtd_theme",
  "sphinx-copybutton"
]


# --- SetUpTool options
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["python_project_template*"]
